--- a/simple-counter/index.html
+++ b/simple-counter/index.html
@@ -6,18 +6,31 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Counter</h1>
-    <p id="number">0</p>
     <div>
-      <button data-action="decrease">decrease</button>
-      <button data-action="reset">reset</button>
-      <button data-action="increase">increase</button>
+      <h1>Counter</h1>
+      <p id="number">0</p>
+      <div>
+        <button data-action="decrease">decrease</button>
+        <button data-action="reset">reset</button>
+        <button data-action="increase">increase</button>
+      </div>
     </div>
 
     <script>
       const number = document.getElementById("number");
       const buttons = document.querySelectorAll("button");
       let value = 0;
+
+      const updateCounterDisplay = () => {
+        number.innerText = value;
+        if (value < 0) {
+          number.style.color = "red";
+        } else if (value > 0) {
+          number.style.color = "green";
+        } else {
+          number.style.color = "black";
+        }
+      };
 
       buttons.forEach((button) => {
         button.addEventListener("click", () => {
@@ -29,7 +42,7 @@
           } else if (action === "reset") {
             value = 0;
           }
-          number.innerText = value;
+          updateCounterDisplay();
         });
       });
     </script>
