--- a/review-carousel/index.html
+++ b/review-carousel/index.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <div>
-      <h1>Counter</h1>
-      <p id="number">0</p>
-      <div>
-        <button data-action="decrease">decrease</button>
-        <button data-action="reset">reset</button>
-        <button data-action="increase">increase</button>
-      </div>
+      <div id="people"></div>
+      <div><button id="left">left</button></div>
+      <div><button id="rigth">right</button></div>
     </div>
 
     <script src="script.js"></script>
