review-carousel done

--- a/review-carousel/index.html
+++ b/review-carousel/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <div>
-      <div id="people"></div>
-      <div><button id="left">left</button></div>
-      <div><button id="rigth">right</button></div>
+      <div id="card"></div>
+      <button id="left">left</button>
+      <button id="right">right</button>
     </div>
+    <button id="random">randomBtn</button>
 
     <script src="script.js"></script>
   </body>
