--- a/responsive-navbar/index.html
+++ b/responsive-navbar/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <nav>
-      <img src="img/logo.svg" alt="" />
+      <div class="nav-header">
+        <img src="img/logo.svg" alt="" />
+        <button class="nav-btn">Nav</button>
+      </div>
       <div class="navigation">
         <a href="#">Home</a>
         <a href="#">About</a>
