--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -11,7 +11,7 @@
     <aside class="sidebar">
       <div class="side-head">
         <h1>LOGO</h1>
-        <button>X</button>
+        <button class="close-btn">X</button>
       </div>
       <div class="links">
         <a href="">Home</a>
